# iQuHack-2026-NVIDIA

./: AI_REPORT.md  PRD.md
phase2/: README.md  pyproject.toml
phase2/benchmarks/: __init__.py  benchmark_suite.py  visualization.py
phase2/scripts/: run_benchmarks.py
phase2/src/: __init__.py
phase2/src/algorithms/: __init__.py  hybrid.py  naive_qaoa.py  rqaoa.py
phase2/src/solvers/: __init__.py  mts.py
phase2/src/utils/: __init__.py  labs_utils.py
phase2/tests/: __init__.py  test_benchmark_suite.py  test_gpu_acceleration.py  test_hybrid.py  test_labs_utils.py  test_mts.py  test_rqaoa.py
tutorial_notebook/: 01_quantum_enhanced_optimization_LABS.ipynb
